<resources>
    <string name="app_name">Petagram</string>

    <string name="content_pet_image">Pet image</string>
    <string name="content_icon_bone">Rating icon</string>
    <string name="content_profile_photo">Profile photo</string>

    <string name="label_names">Names</string>
    <string name="label_email">Email</string>
    <string name="label_msg">Your Message</string>
    <string name="label_send">Send</string>

    <string name="menu_favorites">Favorites</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_about">About</string>
    <string name="menu_others">Others</string>

    <string name="content_desc_fab">floating button up</string>
    <string name="author">Author</string>

    <string name="msg_error_mail">Email could not be accessed, please check settings</string>


    <string name="info_author_name">Luis Olazo</string>
    <string name="info_author_email">myemail@gmail.com</string>
    <string name="info_author_phone">+51 999666999</string>
    <string name="info_description">Application of course 3 - Module 4 of the Specialized Program: Mobile Application Development with Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>