<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_pets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#757575"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName"
        tools:text="Version 1.X" />

    <TextView
        android:id="@+id/tvInfoApp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/info_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppVersion"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/tvAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/author"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvInfoApp"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoApp" />

    <TextView
        android:id="@+id/tvAuthorName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/info_author_name"
        app:drawableStartCompat="@drawable/user_id_svgrepo_com"
        app:layout_constraintStart_toStartOf="@+id/tvAuthor"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthor" />

    <TextView
        android:id="@+id/tvAuthorEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/info_author_email"
        app:drawableStartCompat="@drawable/email_svgrepo_com"
        app:layout_constraintStart_toStartOf="@+id/tvAuthorName"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthorName" />

    <TextView
        android:id="@+id/tvAuthorPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/info_author_phone"
        android:layout_marginBottom="16dp"
        app:drawableStartCompat="@drawable/cellphone_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvAuthorEmail"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthorEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>